--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -84,13 +84,13 @@
                 <div class="col col-12 col-lg-7">
                     <nav class="nav">
                         <ul>
-                            <li><a href="medzone.html">MEDZONE</a></li>
-                            <li><a href="products.html">ÜRÜNLER</a></li>
-                            <li><a href="how-is-it-used.html">NASIL KULLANILIR</a></li>
-                            <li><a href="documents.html">BELGELERİMİZ</a></li>
+                            <li><a href="hakkimizda.html">HAKKIMIZDA</a></li>
+                            <li><a href="urunler.html">ÜRÜNLER</a></li>
+                            <li><a href="nasil-kullanilir.html">NASIL KULLANILIR</a></li>
+                            <li><a href="dokumanlar.html">BELGELERİMİZ</a></li>
                             <li><a onclick="window.open('assets/catalog/medzone-katalog.pdf', '_blank')" href="javascript:;">KATALOG</a></li>
                             <li><a href="blog.html">BLOG</a></li>
-                            <li><a href="contact.html">BİZE ULAŞIN</a></li>
+                            <li><a href="iletisim.html">BİZE ULAŞIN</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -103,10 +103,12 @@
             </div>
         </div>
     </header><!-- header -->
-    <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12030.542921119059!2d28.971031!3d41.0769545!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91278d270bc3e682!2sMedzone%20Sa%C4%9Fl%C4%B1k%20Hizmetleri%20San%20ve%20Tic%20Ltd%20%C5%9Eti!5e0!3m2!1str!2str!4v1612090865993!5m2!1str!2str" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div><!-- map -->
-    <div class="page-section-1 mt-setting" style="margin-top:-180px">
+    <div class="medzone-banner">
+        <div class="img">
+            <img src="assets/images/medzone-banner-img.jpg" alt="" />
+        </div>
+    </div><!-- medzone-banner -->
+    <div class="page-section-1 mt-setting" style="margin-top:-310px">
         <div class="container">
             <div class="bg-white">
                 <div class="row">
@@ -114,56 +116,50 @@
                     <div class="col col-12 col-lg-10">
                         <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                             <h2>
-                                Merkez Ofis
-                                <span>MEDZONE Sağlık Hizmetleri</span>
+                                MEDZONE
+                                <span>SAĞLIK HİZMETLERİ</span>
                             </h2>
                         </div>
                         <div class="text-article t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <article>
-                                <p><span>Merkez Mah. Kağıthane Cad. Seçkin Sokak Dap Vadi Z OFİS Binası No:2-4/A, Kat:0, Bağımsız Bölüm:103 İstanbul/Kağıthane</span></p>
+                                <p><span>Medzone Sağlık Hizmetleri, dünya standartlarında sağlık hizmeti sunmayı ilke edinmiş, çağdaş yenilikleri yakından takip eden ve sektörde öncülük eden bir kurumdur. Vizyonumuz; hem yurt içinde hem de yurt dışında, tüm hastalarımıza en yüksek kalitede ürün ve hizmeti sunarak güven, kalite ve memnuniyetin adresi olmaktır. Hastalarımızın kendilerini daima güven içinde hissettikleri, beklentilerinin karşılandığı ve sağlıkta yüksek yaşam kalitesine ulaştıkları bir ortam yaratmayı hedefliyoruz. Aynı zamanda sağlık alanında geliştirdiğimiz yenilikçi çözümlerle yalnızca mevcut ihtiyaçları karşılamakla kalmayıp, geleceğin sağlık standartlarını da belirleyen örnek bir kurum olmayı amaçlıyoruz.</span></p>
+                                <p>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunuyor, güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılıyoruz.</p>
+                                <p>Amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirerek, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
+                                <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir. Stratejimizin merkezinde bilime dayalı yenilikler yer almaktadır. Bu yaklaşım sayesinde hastalarımıza daha iyi tedavi sonuçları sunmayı ve sağlık hizmetlerinin büyüyen alanlarında liderliği hedefliyoruz.</p>
                             </article>
                         </div>
                     </div>
                     <div class="col col-12 col-lg-1"></div>
-                </div>
-                <div class="contact-info">
-                    <div class="row">
-                        <div class="col col-12 col-lg-2"></div>
-                        <div class="col col-12 col-lg-2" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                            <a href="tel:05324998393" class="item">
-                                <div class="icon">
-                                    <img src="assets/images/contact-phone.png" alt="" />
-                                </div>
-                                <span>0532 499 83 93</span>
-                            </a>
+                    <div class="col col-12 col-lg-12" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <div class="img">
+                            <img src="assets/images/medzone-banner-img2.jpg" alt="" />
                         </div>
-                        <div class="col col-12 col-lg-2" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                            <div class="item">
-                                <div class="icon">
-                                    <img src="assets/images/contact-fax.png" alt="" />
-                                </div>
-                                <span>0212 321 15 12</span>
-                            </div>
-                        </div>
-                        <div class="col col-12 col-lg-2" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                            <div class="item">
-                                <div class="icon">
-                                    <img src="assets/images/contact-fax-2.png" alt="" />
-                                </div>
-                                <span>0212 321 25 12</span>
-                            </div>
-                        </div>
-                        <div class="col col-12 col-lg-2" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
-                            <a href="mailto:info@medzone.com.tr" class="item">
-                                <div class="icon">
-                                    <img src="assets/images/contact-mail.png" alt="" />
-                                </div>
-                                <span>info@medzone.com.tr</span>
-                            </a>
-                        </div>
-                        <div class="col col-12 col-lg-2"></div>
                     </div>
-                </div><!-- contact-info -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="head" style="margin-top:80px;">
+                        <h2>
+                            MEDZONE
+                            <span>MİSYON & AMACIMIZ</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-7"></div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <div class="text-article">
+                        <p><span>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunmak; güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılamak ve yaşam kalitesini artırmak.</span></p>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                    <div class="text-article">
+                        <p>Medzone Sağlık Hizmetleri olarak temel amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirmeyi, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
+                        <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir.</p>
+                        <p>Stratejimizin merkezinde bilime dayalı yenilikler yer almaktadır. Bu yaklaşım sayesinde hastalarımıza daha iyi tedavi sonuçları sunmayı ve sağlık hizmetlerinin büyüyen alanlarında liderliği hedefliyoruz.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div><!-- page-section-1 -->
@@ -180,13 +176,13 @@
                     <h6 data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">MEDZONE <span>SAĞLIK HİZMETLERİ</span></h6>
                     <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">Dünya standartlarında, çağdaş yenilikleri takip eden ve yeniliklere öncülük eden, diğer sağlık kuruluşları tarafından örnek alınan sağlık kurumu olmak. Yurt içinde ve yurt dışında tüm hastalarımıza en yüksek kalitede ürünler sunmak, hastalarımızın kendilerini güven içinde hissettikleri ve tüm beklentilerinin karşılandığı ,hizmet verdiğimiz tüm insanlara hastalıkta ve sağlıkta yüksek yaşam kalitesi sağlamak.</p>
                     <div class="foot-menu">
-                        <a href="medzone.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">MEDZONE</a>
-                        <a href="products.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
-                        <a href="how-is-it-used.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
-                        <a href="documents.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
+                        <a href="hakkimizda.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">HAKKIMIZDA</a>
+                        <a href="urunler.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
+                        <a href="nasil-kullanilir.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
+                        <a href="dokumanlar.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
                         <a href="assets/catalog/medzone-katalog.pdf" target="_blank" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">KATALOG</a>
                         <a href="blog.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">BLOG</a>
-                        <a href="contact.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
+                        <a href="iletisim.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
                     </div>
                     <div class="signature" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">
                         <a href="javascript:;">
