--- a/sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html
+++ b/sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html
@@ -84,13 +84,13 @@
                 <div class="col col-12 col-lg-7">
                     <nav class="nav">
                         <ul>
-                            <li><a href="medzone.html">MEDZONE</a></li>
-                            <li><a href="products.html">ÜRÜNLER</a></li>
-                            <li><a href="how-is-it-used.html">NASIL KULLANILIR</a></li>
-                            <li><a href="documents.html">BELGELERİMİZ</a></li>
+                            <li><a href="hakkimizda.html">HAKKIMIZDA</a></li>
+                            <li><a href="urunler.html">ÜRÜNLER</a></li>
+                            <li><a href="nasil-kullanilir.html">NASIL KULLANILIR</a></li>
+                            <li><a href="dokumanlar.html">BELGELERİMİZ</a></li>
                             <li><a onclick="window.open('assets/catalog/medzone-katalog.pdf', '_blank')" href="javascript:;">KATALOG</a></li>
                             <li><a href="blog.html">BLOG</a></li>
-                            <li><a href="contact.html">BİZE ULAŞIN</a></li>
+                            <li><a href="iletisim.html">BİZE ULAŞIN</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -242,13 +242,13 @@
                     <h6 data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">MEDZONE <span>SAĞLIK HİZMETLERİ</span></h6>
                     <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">Dünya standartlarında, çağdaş yenilikleri takip eden ve yeniliklere öncülük eden, diğer sağlık kuruluşları tarafından örnek alınan sağlık kurumu olmak. Yurt içinde ve yurt dışında tüm hastalarımıza en yüksek kalitede ürünler sunmak, hastalarımızın kendilerini güven içinde hissettikleri ve tüm beklentilerinin karşılandığı ,hizmet verdiğimiz tüm insanlara hastalıkta ve sağlıkta yüksek yaşam kalitesi sağlamak.</p>
                     <div class="foot-menu">
-                        <a href="medzone.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">MEDZONE</a>
-                        <a href="products.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
-                        <a href="how-is-it-used.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
-                        <a href="documents.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
+                        <a href="hakkimizda.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">HAKKIMIZDA</a>
+                        <a href="urunler.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
+                        <a href="nasil-kullanilir.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
+                        <a href="dokumanlar.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
                         <a href="assets/catalog/medzone-katalog.pdf" target="_blank" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">KATALOG</a>
                         <a href="blog.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">BLOG</a>
-                        <a href="contact.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
+                        <a href="iletisim.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
                     </div>
                     <div class="signature" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">
                         <a href="javascript:;">
