--- a/dokumanlar.html
+++ b/dokumanlar.html
@@ -178,62 +178,62 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <a href="assets/catalog/fda.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-fda.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <a href="assets/catalog/declaration.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-ce.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                <a href="assets/catalog/iso.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-iso.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <a href="assets/catalog/fda.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-fda.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <a href="assets/catalog/declaration.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-ce.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                <a href="assets/catalog/iso.pdf" target="_blank">
+                                <div class="item">
                                     <img src="assets/images/document-iso.jpg" alt="" />
                                     <span class="icon">
                                         <img src="assets/images/pdf-icon.svg" alt="" />
                                     </span>
-                                </a>
+                                </div>
                             </div>
                         </div>
                     </div>
