--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -116,16 +116,22 @@
                     <div class="col col-12 col-lg-10">
                         <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                             <h2>
-                                MEDZONE
-                                <span>SAĞLIK HİZMETLERİ</span>
+                                Medzone Sağlık Hizmetleri: 
+                                <span>Güven, Kalite ve Yenilikte Öncü</span>
                             </h2>
                         </div>
                         <div class="text-article t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <article>
-                                <p><span>Medzone Sağlık Hizmetleri, dünya standartlarında sağlık hizmeti sunmayı ilke edinmiş, çağdaş yenilikleri yakından takip eden ve sektörde öncülük eden bir kurumdur. Vizyonumuz; hem yurt içinde hem de yurt dışında, tüm hastalarımıza en yüksek kalitede ürün ve hizmeti sunarak güven, kalite ve memnuniyetin adresi olmaktır. Hastalarımızın kendilerini daima güven içinde hissettikleri, beklentilerinin karşılandığı ve sağlıkta yüksek yaşam kalitesine ulaştıkları bir ortam yaratmayı hedefliyoruz. Aynı zamanda sağlık alanında geliştirdiğimiz yenilikçi çözümlerle yalnızca mevcut ihtiyaçları karşılamakla kalmayıp, geleceğin sağlık standartlarını da belirleyen örnek bir kurum olmayı amaçlıyoruz.</span></p>
-                                <p>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunuyor, güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılıyoruz.</p>
-                                <p>Amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirerek, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
-                                <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir. Stratejimizin merkezinde bilime dayalı yenilikler yer almaktadır. Bu yaklaşım sayesinde hastalarımıza daha iyi tedavi sonuçları sunmayı ve sağlık hizmetlerinin büyüyen alanlarında liderliği hedefliyoruz.</p>
+                                <p><span>Medzone Sağlık Hizmetleri, dünya standartlarında sağlık hizmeti sunmayı ilke edinmiş, çağdaş yenilikleri sürekli takip eden ve sektörde öncülük eden bir kurumdur. Vizyonumuz, hem yurt içinde hem de yurt dışında, tüm hastalarımıza en yüksek kalitede ürün ve hizmeti sunarak güven, kalite ve memnuniyetin adresi olmaktır.</span></p>
+                                <p>Sağlıkta yüksek yaşam kalitesine ulaşmak için, hastalarımızın güven içinde hissettikleri bir ortam yaratmayı amaçlıyoruz. Yalnızca mevcut ihtiyaçları karşılamakla kalmayıp, geleceğin sağlık standartlarını belirleyen yenilikçi çözümlerle sektördeki liderliğimizi sürdürmeyi hedefliyoruz.</p>
+                                <p>Tıbbi etik kurallarına sıkı sıkıya bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunuyor, güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılıyoruz.</p>
+                                    <p>• Temel Değerlerimiz:</p>
+                                    <p>• Güvenilirlik</p>
+                                    <p>• Etik İlkelere Bağlılık</p>
+                                    <p>• Yenilikçilik</p>
+                                    <p>• İnsan Odaklılık</p>
+                                    <p>• Sürdürülebilirlik</p>
+                                <p>Bilime dayalı yenilikçi yaklaşımlarımız sayesinde daha iyi tedavi sonuçları sunmayı ve sağlık hizmetleri alanında liderliği hedefliyoruz.</p>
                             </article>
                         </div>
                     </div>
