--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <div class="text">
                                             <h1>
                                                 Zonetape Soft Silikon Bant ile Yara İzlerine Son!
-                                                <span>Zonetape Soft – İz Kalmaz, Güven Kalır</span>
+                                                <span>Zonetape Soft Silikon Bant – İz Kalmaz, Güven Kalır</span>
                                             </h1>
                                             <p>Estetik ameliyat sonrası iz kalmaması için güvenilir çözüm: Zonetape Soft silikon bant, bilimsel formülüyle cildinizin iyileşme sürecini destekler ve yara izlerinin görünümünü azaltır.</p>
                                         </div>
@@ -193,8 +193,8 @@
                 <div class="col col-12 col-lg-6">
                     <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <h2>
-                            MEDZONE
-                            <span>SOFT SİLİKON BANT</span>
+                            MEDZONE 
+                            <span>SAĞLIK HİZMETLERİ</span>
                         </h2>
                     </div>
                 </div>
@@ -454,6 +454,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -476,6 +477,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -498,6 +500,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -520,11 +523,12 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonials-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                        <p>yorumumu düzenliyorum keloid için mükemmel bir ürün alerji olan varsa bu sizinle alakalı arkadaşlar ürünle değil herkesin bünyesi farklı keloidim gözle görülür derecede küçüldü ve daha kullanalı 15 gün falan oluyor bazen kaşınıyor çıkarıp bir saat dinlendiriyorum sonra tekrar takıyorum birşey olmuyor sadece düzenli kullanım yeterli</p>
+                                        <p>Yorumumu düzenliyorum keloid için mükemmel bir ürün alerji olan varsa bu sizinle alakalı arkadaşlar ürünle değil herkesin bünyesi farklı keloidim gözle görülür derecede küçüldü ve daha kullanalı 15 gün falan oluyor bazen kaşınıyor çıkarıp bir saat dinlendiriyorum sonra tekrar takıyorum birşey olmuyor sadece düzenli kullanım yeterli</p>
                                         <div class="stars">
                                             <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
@@ -542,6 +546,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -564,6 +569,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
                                     </div>
                                 </div>
                             </div>
@@ -589,27 +595,38 @@
                 <div class="swiper logos-swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="https://www.amazon.com.tr/sp?ie=UTF8&seller=ASAFXGQAW4QQN&asin=B0DZ6SNYK2&ref_=dp_merchant_link&isAmazonFulfilled=1" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <img src="assets/images/tes1.png" alt="">
-                            </a>
-                        </div>
-                        <div class="swiper-slide">
-                            <a href="https://www.trendyol.com/magaza/medzone-saglik-hizm-san-ve-tic-ltd-sti-m-169505?channelId=1&sst=0" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                            <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                 <img src="assets/images/tes2.png" alt="">
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.n11.com/magaza/medzonehealthservice" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                <img src="assets/images/tes3.png" alt="">
-                            </a>
-                        </div>
-                        <div class="swiper-slide">
-                            <a href="https://www.hepsiburada.com/magaza/medzone-health-care" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
+                            <a href="https://www.hepsiburada.com/zonetape-yara-izi-bandi-2cm-x-3mt-soft-silikon-bant-estetik-yara-izi-sezaryen-yanik-ben-aldirma-pm-HB00001AYAMB?magaza=Medzone%20Health%20Care" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                                 <img src="assets/images/tes4.png" alt="">
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.ciceksepeti.com/d/tum-urunler?storeid=1500052651" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
+                            <a href="https://www.amazon.com.tr/ZoneTAPE-4cmx1-5mt-Estetik-Operasyon-Sezaryen-Yan%C4%B1k-Ben/dp/B0DZ6SNYK2?ref_=v_sp_product_dpx" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <img src="assets/images/tes1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="javascript:;" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                <img src="assets/images/farmazon.svg" alt="">
+                                <span class="note">Sadece Eczaneler</span>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://www.pazarama.com/zonetape-soft-silikon-bant-2cmx3mt-estetik-operasyon-karin-germe-sezaryen-yanik-ben-aldirma-p-6972864360062" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                <img src="assets/images/pazarama.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://www.n11.com/urun/zonetape-soft-silikon-estetik-yara-izi-duzeltme-bandi-2-cm-x-3-m-2686893?magaza=medzonehealthservice" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                <img src="assets/images/tes3.png" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://www.ciceksepeti.com/zonetape-soft-silikon-bant-estetik-yara-izi-sezaryen-obezite-yanik-ben-aldirma-kcm56436944" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                                 <img src="assets/images/tes5.png" alt="">
                             </a>
                         </div>
