--- a/nasil-kullanilir.html
+++ b/nasil-kullanilir.html
@@ -136,7 +136,7 @@
                                 <p><span>İlk Uygulama:</span></p>
                                 <p>ZoneTAPE Soft Silikon Bant, uygulandığı bölgede 48 saat boyunca çıkarılmadan kalmalıdır.</p><br>
 								<p><span>Erken Değişim Gerektiren Durumlar:</span></p>
-                                <p>Aşağıdaki durumlarda bant erken ayrılabilir, bu durumda yenisiyle değiştirilmelidir:</p>
+                                <p>Scar (yara izi) ya da keloid oluşumunun eskiliğine bağlı olarak bant: </p>
 								<p>Ciltte aşırı yağlanma</p>
 								<p>Terleme</p>
 								<p>Yaz aylarında yüksek sıcaklık</p>
