--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -477,7 +477,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -500,7 +500,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -523,7 +523,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -546,7 +546,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -569,7 +569,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">SATIN AL</a>
+                                        <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true" target="_blank">SATIN AL</a>
                                     </div>
                                 </div>
                             </div>
